<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.DetailsFragment"
    android:orientation="vertical">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/suburbTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                tools:text="Suburb"
                android:textSize="26sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/summaryTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="2dp"
                android:gravity="start"
                android:textSize="18sp"
                tools:text="Summary"/>

        </LinearLayout>

        <TextView
            android:id="@+id/temperatureTextView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            tools:text="Temp"
            android:textSize="40sp"/>

    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:dividerInsetStart="16dp"
        app:dividerInsetEnd="16dp"/>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/feels_like"/>

            <TextView
                android:id="@+id/feelsLikeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="2dp"
                android:gravity="start"
                android:textSize="14sp"
                tools:text="16"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/humidity"/>

            <TextView
                android:id="@+id/humidityTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="2dp"
                android:gravity="start"
                android:textSize="14sp"
                tools:text="20%"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/wind"/>

            <TextView
                android:id="@+id/windTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="2dp"
                android:gravity="start"
                android:textSize="14sp"
                tools:text="ESE at 17kph" />

        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:dividerInsetStart="16dp"
        app:dividerInsetEnd="16dp"/>

    <TextView
        android:id="@+id/lastUpdatedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Last updated:"
        android:padding="10dp"
        android:textSize="16sp"
        android:layout_gravity="center"/>

</LinearLayout>